# rating

./: pyproject.toml
rating/: __init__.py
tests/: test_rating.py
