[tool.poetry]
name = "rating"
version = "0.1.0"
description = "Ratings made easy"
authors = ["tba91"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pytest = "^6.2.4"
black = "^21.5b1"
flake8 = "^3.9.2"
safety = "^1.10.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
